Rename tests and remove old tests